Fixed the + More link on tablet view right before phone.

--- a/assets/sass/partials/design/views/_directory.scss
+++ b/assets/sass/partials/design/views/_directory.scss
@@ -79,7 +79,7 @@
         margin: 0;
         li {
             list-style: none;
-            border: 1px solid #DEDEDE;
+            border-bottom: 1px solid #DEDEDE;
             padding: 0;
             @include clearfix;
         }
